--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "@inertiajs/vue3": "^1.0.15",
         "@tinymce/tinymce-vue": "^4.0.7",
         "@vitejs/plugin-vue": "^5.0.4",
+        "@vuepic/vue-datepicker": "^3.2.2",
         "update": "^0.4.2",
         "vue": "^3.4.21",
         "vue-sweetalert2": "^5.0.2"
