--- a/package.json
+++ b/package.json
@@ -5,12 +5,13 @@
         "build": "set \"VITE_CJS_TRACE=true\" && vite build"
     },
     "devDependencies": {
-        "axios": "^1.6.4",
+        "axios": "^0.25.0",
         "laravel-vite-plugin": "^0.1.0",
         "vite": "^5.4.14",
         "vite-plugin-laravel": "^0.3.1"
     },
     "dependencies": {
+        "@chenfengyuan/vue-countdown": "^2.0.0",
         "@inertiajs/vue3": "^1.0.15",
         "@tinymce/tinymce-vue": "^4.0.7",
         "@vitejs/plugin-vue": "^5.0.4",
