--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         "@tinymce/tinymce-vue": "^4.0.7",
         "@vitejs/plugin-vue": "^5.0.4",
         "@vuepic/vue-datepicker": "^3.2.2",
+        "@vueup/vue-quill": "^1.2.0",
         "update": "^0.4.2",
         "vue": "^3.4.21",
         "vue-sweetalert2": "^5.0.2"
