--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
         "@vitejs/plugin-vue": "^5.0.4",
         "@vuepic/vue-datepicker": "^3.2.2",
         "@vueup/vue-quill": "^1.2.0",
+        "chart.js": "^3.9.1",
         "update": "^0.4.2",
         "vue": "^3.4.21",
+        "vue-chartjs": "^4.1.2",
         "vue-sweetalert2": "^5.0.2"
     }
 }
